# archk

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yml  env.sh
.github/workflows/: docker.yml  rust.yml
archk/: Cargo.toml
archk-api/: Cargo.toml  build.rs
archk-api-docgen/: Cargo.toml
archk-api-docgen/src/: main.rs
archk-api-server/: Cargo.toml
archk-api-server/src/: main.rs
archk-api/migrations/: 0001_initial.sql  0002_service_accounts.sql
archk-api/src/: app.rs  lib.rs  main.rs  roles.rs
archk-api/src/v1/: auth.rs  extra.rs  mod.rs  routes.rs  service.rs  space.rs  user.rs
archk/src/: lib.rs
archk/src/v1/: api.rs  auth.rs  docs.rs  macros.rs  mod.rs  service.rs  space.rs  user.rs
archk/src/v1/models/: mod.rs
documentation-macro/: Cargo.toml
documentation-macro/src/: lib.rs
