[package]
name = "archk-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rand = "0.8"
base64 = "0.22"
crc32fast = "1.4"
cuid2 = "0.1"
uuid = { version = "1", features = ["v4", "fast-rng"] }

bcrypt = "0.15"

axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "catch-panic"] }
http-body-util = "0.1"
once_cell = "1"

sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }

tracing = "0.1"
tracing-subscriber = "0.3"

archk = { path = "../archk", features = ["axum"] }

[build-dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
