[package]
name = "archk"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = ["ssh"]
axum = ["dep:axum"]
derive = []
ssh = ["dep:russh-keys"]

[dependencies]
serde = { version = "1", features = ["derive"] }
rand = "0.8"
base64 = "0.22"
crc32fast = "1.4"
cuid2 = "0.1"
once_cell = "1"
regex = "1"
uuid = { version = "1.10", features = ["v4", "fast-rng"] }

axum = { version = "0.7", optional = true }
russh-keys = { version = "0.44", optional = true }

documentation-macro = { path = "../documentation-macro" }

[dev-dependencies]
serde_json = "1"
